--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -6,27 +6,24 @@
 		<meta name="viewport" content="width=device-width" />
 
 		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/icon?family=Material+Icons"
-		/>
-		<!-- Roboto -->
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- Roboto -->
 		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
-		/>
-		<!-- Roboto Mono -->
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+    />
+    <!-- Roboto Mono -->
 		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto+Mono"
-		/>
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto+Mono"
+    />
 
-		<!-- SMUI Styles -->
+    <!-- SMUI Styles -->
 		<link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
-		<link
-				rel="stylesheet"
-				href="/smui-dark.css"
-				media="screen and (prefers-color-scheme: dark)"
-		/>
+		<link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
